--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Chris Rilling # your name (or website title) here
 logo: "C:/Users/coulo/OneDrive/Pictures/Camera Roll/WIN_20210618_14_08_20_Pro.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br>Geologist working in O&G for 15 years.<br>
+  <br>Geologist working in O&G for 15 years.  Currently working on advanced degree in GIS and geospatial technologies<br>
   Second description 
   <br><br>
   <a href="www.linkedin.com/in/christopher-rilling">View My LinkedIn Profile</a> 
