--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Geologist working in O&G for 15 years.  Currently working on advanced degree in GIS and geospatial technologies<br>
   Second description 
   <br><br>
-  <a href="www.linkedin.com/in/christopher-rilling">View My LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/crilling">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
