--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chris Rilling # your name (or website title) here
-logo: C:/Users/coulo/OneDrive/Desktop/AP21048435477999.jpg # your photo (or logo) here
+logo: "C:/Users/coulo/OneDrive/Desktop/AP21048435477999.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br>Geologist working in O&G for 15 years.  Currently working on advanced degree in GIS and geospatial technologies<br>
