--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Chris Rilling # your name (or website title) here
 logo: "images/AP21048435477999.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Description 
   <br>Geologist working in O&G for 15 years.  Currently working on advanced degree in GIS and geospatial technologies<br>
-  Second description 
+  
   <br><br>
   <a href="https://www.linkedin.com/in/crill">View My LinkedIn Profile</a> 
   
