--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Chris Rilling # your name (or website title) here
 logo: "images/AP21048435477999.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Description 
-  <br>Geologist working in O&G for 15 years through various functions.  MS in geospatial technologies and looking for new opportunities<br>
+  <br>Geologist working in O&G for 15 years through various functions.<br>
+  <br>MS in geospatial technologies and looking for new opportunities<br>
   <br><br>
   <a href="https://www.linkedin.com/in/crill">View My LinkedIn Profile</a> 
   
